# rex

./: Cargo.toml  build.rs  pyproject.toml  rex_wrapper.py
example/parquets/split_0/: 0.parquet  1.parquet  2.parquet
src/: lib.rs
