[package]
name = "rex"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rex"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.0", features = ["extension-module", "macros"] }
arrow = "39.0.0"
parquet = "39.0.0"
chrono = "0.4.26"
rand = "0.8.5"
zstd = "0.12"
libc = "0.2.158"
